--- a/.github/workflows/cd_pipeline.yml
+++ b/.github/workflows/cd_pipeline.yml
@@ -2,9 +2,9 @@ name: Serverless CI/CD
 
 on:
   workflow_dispatch:
-    #  push:
-    #branches:
-    #  - main
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
